[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/editor/ui/assets/next.png" type="Texture" id=1]
[ext_resource path="res://menu/editor/ui/assets/prev.png" type="Texture" id=2]
[ext_resource path="res://menu/editor/ui/assets/board.png" type="Texture" id=3]
[ext_resource path="res://menu/editor/ui/object_option/object_option.gd" type="Script" id=4]

[node name="object_option" type="Control"]
margin_top = 924.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 6.0
margin_right = 46.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 0 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 50.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 5
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 554.0
margin_right = 594.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -168.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 22.0
margin_right = 82.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 0 )

[node name="prev_object" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_top = 20.0
margin_right = 146.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 100 )
rect_pivot_offset = Vector2( 30, 50 )
size_flags_vertical = 8
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="tile_options" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 120 )
mouse_filter = 2
alignment = 1

[node name="next_object" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 454.0
margin_top = 20.0
margin_right = 514.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 100 )
rect_pivot_offset = Vector2( 30, 50 )
size_flags_vertical = 8
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 518.0
margin_right = 578.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 24 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/prev_object" to="." method="_on_prev_object_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/next_object" to="." method="_on_next_object_pressed"]
